--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -54,11 +54,11 @@
             <article class="side">
               <h3>Sidebar Menu</h3>
               <nav class="side-bar-search">
-                <a href="/index.html">Home</a></li><br>
+                <a href="/index.html">Home</a><br>
                 <BR>
-                <a href="/src/html/contact.html">Contact Us</a></li><br>
+                <a href="/src/html/contact.html">Contact Us</a><br>
                 <BR>
-                <a href="/src/html/about.html">About</a></li><br>
+                <a href="/src/html/about.html">About</a><br>
                 <BR>
               </nav>
              </article>
